--- a/python/import_mongodb_data_simple.ipynb
+++ b/python/import_mongodb_data_simple.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c7a5dd82",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pymongo\n",
     "import pandas as pd\n",
@@ -18,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4dfade6b",
    "metadata": {},
    "outputs": [],
@@ -34,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "33ae60bf",
    "metadata": {},
    "outputs": [],
@@ -43,8 +54,16 @@
     "client = pymongo.MongoClient(settings[\"MONGODB_URI\"])\n",
     "# open the database \"main\" and the collection \"RLWM\"\n",
     "db = client[\"main\"]\n",
-    "collection=db[\"RLWM\"]"
+    "collection=db[\"UserUnknown\"]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e227b002",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
