--- a/python/import_mongodb_data.ipynb
+++ b/python/import_mongodb_data.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c7a5dd82",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pymongo\n",
     "import pandas as pd\n",
@@ -18,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4dfade6b",
    "metadata": {},
    "outputs": [],
@@ -34,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "33ae60bf",
    "metadata": {},
    "outputs": [],
@@ -43,7 +54,24 @@
     "client = pymongo.MongoClient(settings[\"MONGODB_URI\"])\n",
     "# open the database \"main\" and the collection \"RLWM\"\n",
     "db = client[\"main\"]\n",
-    "collection=db[\"RLWM\"]"
+    "collection=db[\"UserUnknown\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "433ba2a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# query the database to find all the documents of type \"expdef\" that contain a field named \"prolificId\" whose value exists in our prolificId_list\n",
+    "query = {\n",
+    "    \"trial_type\": \"image-button-response\",\n",
+    "}\n",
+    "trial_cursor = collection.find(query).sort('trial_index', 1)\n",
+    "\n",
+    "for trial in trial_cursor:\n",
+    "    print(trial)"
    ]
   },
   {
